--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ wheels/
 
 # vscode settings
 .vscode/
+.DS_Store
 
 # environment variables
 .env
@@ -18,3 +19,10 @@ wheels/
 # Pytest
 .pytest_cache/
 .coverage
+
+# dbt
+
+target/
+dbt_packages/
+logs/
+.dbt
