--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dbt-core>=1.11.2",
+    "dbt-postgres>=1.10.0",
     "docker>=7.1.0",
     "plotly>=6.3.0",
     "psycopg>=3.2.9",
